# parsing_4lapy

./: .env.example  README.md  categories.json  command_line.py  config.py  main.py  parser.py  pyproject.toml  requirements.txt  typings.py
cities/moscow/: sukhoi-korm.json
cities/saint-petersburg/: sukhoi-korm.json
